Сделал несколько страник: faq, контакты, о нас, оплата и доставка

--- a/src/contact.html
+++ b/src/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./favicon.png" sizes="16x16" rel="icon" type="image/png">
   <link rel="stylesheet" href="css/main.min.css">
-  <title>Document</title>
+  <title>Контакты</title>
   <script defer src="js/main.js"></script>
 </head>
 <body class="page__body">
@@ -89,7 +89,7 @@
             Мы на карте
           </h2>
           <div class="contact-map__map">
-            
+
           </div>
         </div>
       </section>
