--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -1,7 +1,7 @@
 <header class="header header-page">
   <div class="container">
     <div class="header__inner">
-      <a href="#" class="logo">
+      <a href="./index.html" class="logo">
         <img src="./img/logo.png" alt="Логотип">
       </a>
       <nav class="nav" title="Навигация по сайту">
@@ -9,16 +9,16 @@
           <li class="nav__item"><a href="#" class="nav__link">
             Каталог
           </a></li>
-          <li class="nav__item"><a href="#" class="nav__link">
+          <li class="nav__item"><a href="./payment.html" class="nav__link">
             Доставка и оплата
           </a></li>
-          <li class="nav__item"><a href="#" class="nav__link">
+          <li class="nav__item"><a href="./about-us.html" class="nav__link">
             О нас
           </a></li>
-          <li class="nav__item"><a href="#" class="nav__link">
+          <li class="nav__item"><a href="./contact.html" class="nav__link">
             Контакты
           </a></li>
-          <li class="nav__item"><a href="#" class="nav__link">
+          <li class="nav__item"><a href="./faq.html" class="nav__link">
             Faq
           </a></li>
           <li class="nav__item">
