Сделал несколько страниц для сайта

--- a/src/contact.html
+++ b/src/contact.html
@@ -7,6 +7,8 @@
   <link href="./favicon.png" sizes="16x16" rel="icon" type="image/png">
   <link rel="stylesheet" href="css/main.min.css">
   <title>Контакты</title>
+  <script defer src="https://api-maps.yandex.ru/2.1/?apikey=261b9a65-edba-49ff-845d-999d0e37f0bf&lang=ru_RU" type="text/javascript">
+  </script>
   <script defer src="js/main.js"></script>
 </head>
 <body class="page__body">
@@ -88,7 +90,7 @@
           <h2 class="contact-map__title">
             Мы на карте
           </h2>
-          <div class="contact-map__map">
+          <div class="contact-map__map" id="map">
 
           </div>
         </div>
