--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -33,7 +33,7 @@
       </nav>
       <div class="header__right info-box header-page__info-box">
         <div class="better-call">
-          <a href="375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
+          <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
         </div>
         <div class="bag">
           <span class="bag__num">5</span>
