--- a/src/parts/hero.html
+++ b/src/parts/hero.html
@@ -35,7 +35,7 @@
             </ul>
           </div>
           <div class="better-call">
-            <a href="375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
+            <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
             <button class="btn-reset better-call__btn">Заказать звонок</button>
           </div>
           <div class="bag">
