--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./favicon.png" sizes="16x16" rel="icon" type="image/png">
   <link rel="stylesheet" href="css/main.min.css">
-  <title>Document</title>
+  <title>Lover Flower</title>
   <script defer src="js/main.js"></script>
 </head>
 <body class="page__body">
