--- a/src/parts/breadcrumbs.html
+++ b/src/parts/breadcrumbs.html
@@ -7,9 +7,9 @@
         </a>
       </li>
       <li class="breadcrumbs-list__item">
-        <span  class="breadcrumbs-list__link">
+        <a href="#" class="breadcrumbs-list__link breadcrumbs-list__link--current">
           Контакты
-        </span>
+        </a>
       </li>
     </ul>
   </div>
