--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -6,9 +6,52 @@
       </a>
       <nav class="nav" title="Навигация по сайту">
         <ul class="list-reset nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">
+          <li class="nav__item nav__item--dropdown">
+            <a href="#" class="nav__link">
             Каталог
-          </a></li>
+          </a>
+          <ul class="dropdown-menu list-reset">
+            <li class="dropdown-menu__item">
+              <a href="#" class="dropdown-menu__link  nav__link" style="filter: blur(0px);">
+                Популярное
+            </a>
+            </li>
+            <li class="dropdown-menu__item">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Сборны букеты
+            </a>
+            </li>
+            <li class="dropdown-menu__item">
+              <a href="item-#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                монобукеты
+            </a>
+            </li>
+            <li class="dropdown-menu__item dropdown-menu__item--hidden">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Композиции из&nbsp;цветов к&nbsp;коробке
+            </a>
+            </li>
+            <li class="dropdown-menu__item dropdown-menu__item--hidden">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                интерьерные композиции
+            </a>
+            </li>
+            <li class="dropdown-menu__item dropdown-menu__item--hidden">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                индивидуальный букет
+            </a>
+            </li>
+            <li class="dropdown-menu__item dropdown-menu__item--hidden">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                сухоцветы
+            </a>
+            </li>
+            <li class="dropdown-menu__item dropdown-menu__item--hidden">
+              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                дополнительно
+            </a>
+            </li>
+          </ul></li>
           <li class="nav__item"><a href="./payment.html" class="nav__link">
             Доставка и оплата
           </a></li>
