--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -75,16 +75,37 @@
         </ul>
       </nav>
       <div class="header__right info-box header-page__info-box">
-        <div class="better-call">
-          <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
+        <div class="info-box__hero">
+          <div class="header__right-item info-box__item">
+            <a href="mailto:zakaz@loverflower.by" class="header__right-info info-box__text">
+              zakaz@loverflower.by
+            </a>
+            <span>
+              Доставка 24/7 по договоренности с оператором
+            </span>
+          </div>
+          <div class="header__right-item info-box__item">
+            <address class="header__right-info info-box__text">
+              ул. Тимирязева 67
+            </address>
+            <span>
+              10:00 до 21:00 <br>
+              без выходных
+            </span>
+          </div>
         </div>
-        <div class="bag">
-          <span class="bag__num">5</span>
-          <button class="btn-reset bag__btn">
-            <svg class="">
-              <use xlink:href="img/sprite.svg#bag"></use>
-            </svg>
-          </button>
+        <div class="info-box__second">
+          <div class="better-call">
+            <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
+          </div>
+          <div class="bag">
+            <span class="bag__num">5</span>
+            <button class="btn-reset bag__btn">
+              <svg class="">
+                <use xlink:href="img/sprite.svg#bag"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </div>
