Сделал вылет корзины при клике

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -599,6 +599,8 @@
       </section>
     </main>
     @include('parts/footer.html')
+
   </div>
+  @include('parts/card-bag.html')
 </body>
 </html>
