--- a/src/faq.html
+++ b/src/faq.html
@@ -102,6 +102,8 @@
       </section>
     </main>
     @include('parts/footer.html')
+
   </div>
+  @include('parts/card-bag.html')
 </body>
 </html>
