--- a/src/card.html
+++ b/src/card.html
@@ -327,6 +327,8 @@
       </section>
     </main>
     @include('parts/footer.html')
+
   </div>
+  @include('parts/card-bag.html')
 </body>
 </html>
