--- a/src/corporate.html
+++ b/src/corporate.html
@@ -166,6 +166,8 @@
       </section>
     </main>
     @include('parts/footer.html')
+
   </div>
+  @include('parts/card-bag.html')
 </body>
 </html>
